--- a/static/donate/index.html
+++ b/static/donate/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Playing-reward</title>
+	<title>Donation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
 	<!--禁止缩放-->
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 	<div id="QRBox" class="pos-f left-100">
 		<div id="MainBox"></div>
 	</div>
-	<script async src="/script.js"></script>
+	<script async src="script.js"></script>
 </body>
 
 </html>
