--- a/static/404page.html
+++ b/static/404page.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.loli.net/css?family=Montserrat:300,700" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL | absLangURL }}/css/404style.css" />
+	<link type="text/css" rel="stylesheet" href="vitoho.ml/css/404style.css" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,15 +25,12 @@
 </head>
 
 <body style="background:transparent;">
-
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>4<span></span>4</h1>
 			</div>
 			<h2>Oops! Page Not Be Found</h2>
-			<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
-			<a href="{{ .Site.BaseURL | absLangURL }}">Back to homepage</a>
 		</div>
 	</div>
 
