--- a/static/donate/index.html
+++ b/static/donate/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body"background:transparent;">
+<body style="background:transparent;">
 	<ul id="donateBox" class="list pos-f tr3">
 
 		<li id="AliPay">AliPay</li>
