--- a/static/donate/index.html
+++ b/static/donate/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body style="background:transparent;">
+	<a href="#" target="_blank" style="position: fixed;">
+		<div id="DonateText" class="tr3">Donate Box</div>
+	</a>
 	<ul id="donateBox" class="list pos-f tr3">
 
 		<li id="AliPay">AliPay</li>
