--- a/static/donate/index.html
+++ b/static/donate/index.html
@@ -12,9 +12,11 @@
 		<div id="DonateText" class="tr3">Donate Box</div>
 	<ul id="donateBox" class="list pos-f tr3">
 
+		<li id="PayPal">
+			<a href="https://www.buymeacoffee.com/vitoho" target="_blank">PayPal</a>
+		</li>
 		<li id="AliPay">AliPay</li>
 		<li id="WeChat">WeChat</li>
-		<style>.bmc-button img{width: 22px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{line-height: 28px !important;height:28px !important;width: 160px !important;text-decoration: none !important;display:inline-flex !important;color:#888 !important;background-color:#FFFFFF !important;border-radius: 3px !important;border: 1px solid transparent !important;padding: 1px 9px !important;font-size: 22px !important;letter-spacing: 0.6px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;-o-transition: 0.3s all linear !important;-webkit-transition: 0.3s all linear !important;-moz-transition: 0.3s all linear !important;-ms-transition: 0.3s all linear !important;transition: 0.3s all linear !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#000000 !important;}</style><link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/vitoho"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>
 	</ul>
 	<div id="QRBox" class="pos-f left-100">
 		<div id="MainBox"></div>
